# data_prep_TYNDP2022

./: .gitignore  NTC - Copy.py  OREES_data.py  README.md  cap_gen_read.py  data_prep_for_model.py  data_prep_for_model_demand_data_reader.py  data_prep_for_model_hydro_data_reader.py  data_prep_for_model_ntc_data_reader.py  demand.py  demand_data_reader.py  electrolysis_demand_read.py  flows_h2_export_import_electrolysis_all_data.csv  h2_import_export_redo.py  holiday_allignment.py  hydro_data_reader.py  lists.py  mappings_tyndp.py  market_nodes.csv  ninja.py  ntc_data_reader.py  prognos.py  prognos_demand.py  prognos_gen_limitted_energy.py  pyproject.toml  requirements.txt  res_data_reader.py  tyndp22_flows.py
NTC/: NTC_export_Distributed Energy_2050_1995.csv  NTC_export_Global Ambition_2050_2008.csv  NTC_export_import_selected_Distributed Energy_2050_2008.csv  NTC_export_import_selected_Global Ambition_2050_1995.csv  NTC_export_selected_Distributed Energy_2050_2008.csv  NTC_export_selected_Global Ambition_2050_2009.csv  NTC_import_Distributed Energy_2050_2008.csv  NTC_import_Global Ambition_2050_2009.csv  NTC_import_selected_Distributed Energy_2050_1995.csv  NTC_import_selected_Global Ambition_2050_2009.csv  all_NTC_export_import_selected.csv  all_NTC_export_import_selected.xlsx
RES_availability_factor_PECD/: NTC _export_Global Ambition_2050_1995.csv  demand _GlobalAmbition_2050_2008.csv  pv_2025_1995.csv  pv_2025_2007.csv  pv_2025_2008.csv  pv_2030_1995.csv  pv_2030_2007.csv  pv_2030_2008.csv
availability_factors_CH_OREES/: pv_field_winter.csv  pv_field_year.csv  (+4 more)
(+66 files in other folders)
